# theme-template-recommendation

./: .gitignore  .mcp.json  AgentService逐环节执行详解.md  CLAUDE.md  README.md  Skill方案和AgentService方案对比分析.md
.claude/: settings.json
agent-service/: .dockerignore  .env  .env.example  API.md  DEPLOY.md  Dockerfile  Dockerfile.all-in-one  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_models.py
agent-service-docker/: Dockerfile  requirements.txt
agent-service-docker/scripts/: build_hierarchy.py  extract_templates.py  healthcheck.py  indicator_vectorizer.py
agent-service/deploy/: .env.example
agent-service/docker/: supervisord.conf
agent-service/scripts/: .env.example  README.md  config.py  extract_indicators.py  indicator_vectorizer.py  init_ontology.py  neo4j_loader.py  update_ontology.py
agent-service/src/agent_service/: __init__.py  config.py  docker-compose.yml  main.py
agent-service/src/agent_service/api/: routes.py  schemas.py
agent-service/src/agent_service/graph/: graph.py  nodes.py  state.py
agent-service/src/agent_service/llm/: __init__.py  client.py  models.py  prompts.py
agent-service/src/agent_service/tools/: __init__.py  template_tools.py  theme_tools.py  vector_search.py
agent-service/src/agent_service/utils/: ttl_memory_saver.py
agent-service/tests/: conftest.py  test_concurrency.py
docs/: migration-plan.md
mcp-server/: .env.example  requirements.txt  theme_ontology_server.py  theme_resources_server.py  theme_vector_server.py
mcp-server/scripts/: indicator_vectorizer.py
(+21 files in other folders)
